# Arrows

./: README.md  arrows.opam  dune-project
lib/: arrow.ml  dune  examples.ml  parse.ml
tests/: dune  test.ml
