opam-version: "2.0"
name: "arrows"
synopsis: "An OCaml arrows library using modular implicits"
version: "dev"
maintainer: "dvlasits@gmail.com"
authors: ["Daniel Vlasits"]
homepage: "https://github.com/modular-implicits/Arrows"
dev-repo: "git+https://github.com/modular-implicits/Arrows.git"
bug-reports: "http://github.com/modular-implicits/Arrows/issues"
license: "MIT"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
   "dune" {build}
   "ocaml-variants"
     { = "4.02.1+modular-implicits" | = "4.02.1+modular-implicits-ber" }
    "imp"
]